{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 17,
  "lineage": "32865ed7-8b49-d596-2405-9e80aeb70888",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hktvpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:internet-gateway/igw-01ebe00607b3506c5",
            "id": "igw-01ebe00607b3506c5",
            "owner_id": "321503580090",
            "tags": {
              "Name": "hktvpc-igw"
            },
            "tags_all": {
              "Name": "hktvpc-igw"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hktvpc-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:route-table/rtb-0b1eac5624d716150",
            "id": "rtb-0b1eac5624d716150",
            "owner_id": "321503580090",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ebe00607b3506c5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hktvpc-pub-RT"
            },
            "tags_all": {
              "Name": "hktvpc-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hktvpc-igw",
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub1-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd50e3b6ed65fc09",
            "route_table_id": "rtb-0b1eac5624d716150",
            "subnet_id": "subnet-0d64f6970f93e9bdc"
          },
          "dependencies": [
            "aws_internet_gateway.hktvpc-igw",
            "aws_route_table.hktvpc-pub-RT",
            "aws_subnet.hkt-sub-pub-1",
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub2-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058c9c50f9e8f4f13",
            "route_table_id": "rtb-0b1eac5624d716150",
            "subnet_id": "subnet-0f5eea3c72467c0bc"
          },
          "dependencies": [
            "aws_internet_gateway.hktvpc-igw",
            "aws_route_table.hktvpc-pub-RT",
            "aws_subnet.hkt-sub-pub-2",
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub3-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bbca24c10db63c6",
            "route_table_id": "rtb-0b1eac5624d716150",
            "subnet_id": "subnet-0649c63d1e6c4a30c"
          },
          "dependencies": [
            "aws_internet_gateway.hktvpc-igw",
            "aws_route_table.hktvpc-pub-RT",
            "aws_subnet.hkt-sub-pub-3",
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hkt_tf_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:security-group/sg-0e67a7597b88bd1b1",
            "description": "Allow  inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e67a7597b88bd1b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.97.21.163/32"
                ],
                "description": "SG to allow port SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hkt_tf_sg",
            "name_prefix": "",
            "owner_id": "321503580090",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hkt-sub-pri-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:subnet/subnet-0e5aab84c0c461a58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5aab84c0c461a58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321503580090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkttfvpc-prisub-1"
            },
            "tags_all": {
              "Name": "hkttfvpc-prisub-1"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hkt-sub-pri-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:subnet/subnet-01e85456e1823f896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e85456e1823f896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321503580090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkttfvpc-prisub-2"
            },
            "tags_all": {
              "Name": "hkttfvpc-prisub-2"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hkt-sub-pri-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:subnet/subnet-08e404989a8d5ebbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e404989a8d5ebbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321503580090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkttfvpc-prisub-3"
            },
            "tags_all": {
              "Name": "hkttfvpc-prisub-3"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hkt-sub-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:subnet/subnet-0d64f6970f93e9bdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d64f6970f93e9bdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321503580090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkttfvpc-pubsub-1"
            },
            "tags_all": {
              "Name": "hkttfvpc-pubsub-1"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hkt-sub-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:subnet/subnet-0f5eea3c72467c0bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5eea3c72467c0bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321503580090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkttfvpc-pubsub-2"
            },
            "tags_all": {
              "Name": "hkttfvpc-pubsub-2"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hkt-sub-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:subnet/subnet-0649c63d1e6c4a30c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0649c63d1e6c4a30c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321503580090",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hkttfvpc-pubsub-3"
            },
            "tags_all": {
              "Name": "hkttfvpc-pubsub-3"
            },
            "vpc_id": "vpc-0a6e81b68cdbbc6f1"
          },
          "dependencies": [
            "aws_vpc.hktvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hktvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:321503580090:vpc/vpc-0a6e81b68cdbbc6f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b73036619b5bbce6",
            "default_route_table_id": "rtb-023d6be9bf3136028",
            "default_security_group_id": "sg-037e9da09894d6f45",
            "dhcp_options_id": "dopt-02af29207f65b44a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6e81b68cdbbc6f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023d6be9bf3136028",
            "owner_id": "321503580090",
            "tags": {
              "Name": "hkttfvpc"
            },
            "tags_all": {
              "Name": "hkttfvpc"
            }
          }
        }
      ]
    }
  ]
}